ingress/ingress-host-based.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host-based
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: order.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8080
    - host: user.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8080
#   - host: mcu.com
#     http:
#       paths:
#         - path: /shield
#           pathType: Prefix
#           backend:
#             service:
#               name: svc-shield
#               port:
#                 number: 8080
#         - path: /hydra
#           pathType: Prefix
#           backend:
#             service:
#               name: svc-hydra
#               port:
#                 number: 8080
